[gd_scene load_steps=8 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://src/screens/shop/Shop.gd" type="Script" id=2]
[ext_resource path="res://assets/right.png" type="Texture" id=3]
[ext_resource path="res://assets/left.png" type="Texture" id=4]
[ext_resource path="res://assets/star.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeOut"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}

[node name="Shop" type="Control"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 360, 690 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 112.0
margin_top = 915.0
margin_right = 608.0
margin_bottom = 1041.0
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="Button" parent="."]
margin_left = 112.0
margin_top = 761.0
margin_right = 608.0
margin_bottom = 887.0
text = "SELECT"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -416.0
margin_top = -336.0
margin_right = -86.0
margin_bottom = -236.0
rect_scale = Vector2( 2.5, 2.5 )
custom_constants/separation = 130
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prev" type="TextureButton" parent="HBoxContainer"]
modulate = Color( 0.529412, 0.917647, 0.807843, 1 )
margin_right = 100.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 50, 50 )
texture_normal = ExtResource( 4 )

[node name="Next" type="TextureButton" parent="HBoxContainer"]
modulate = Color( 0.529412, 0.917647, 0.807843, 1 )
margin_left = 230.0
margin_right = 330.0
margin_bottom = 100.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bounce" type="ProgressBar" parent="."]
visible = false
margin_left = 152.0
margin_top = 751.0
margin_right = 552.0
margin_bottom = 869.0
min_value = 0.6
max_value = 1.0
value = 0.6
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Bounce"]
margin_right = 400.0
margin_bottom = 118.0
text = "BOUNCE"
align = 1

[node name="Mass" type="ProgressBar" parent="."]
visible = false
margin_left = 160.0
margin_top = 614.0
margin_right = 560.0
margin_bottom = 732.0
min_value = 4.0
max_value = 10.0
step = 0.1
value = 6.0
percent_visible = false

[node name="Label" type="Label" parent="Mass"]
margin_right = 400.0
margin_bottom = 118.0
text = "MASS"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 2 )

[node name="Star" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.968627, 0.188235, 1 )
position = Vector2( 528, 976 )
scale = Vector2( 1.56874, 1.56874 )
texture = ExtResource( 5 )

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_Select_pressed"]
[connection signal="pressed" from="HBoxContainer/Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="HBoxContainer/Next" to="." method="_on_Next_pressed"]
